feat(platform): preview-clean GA baseline on JDK 25 LTS (ADR-066, S19)
The distributed artifact now builds on JDK 25 LTS with no --enable-preview on
main sources, and imposes neither on consumers. 930 distributed classes,
class-file major 69, zero preview-stamped.

TWO OF THE FOUR SITES DID NOT BECOME FORKS, and that is the substantive
finding. OutboxOrchestrator and CommunityEventLoop moved to
StructuredScope.openWithoutBindings() — not a compromise, since both loop
threads are plain virtual threads holding no bindings, so the scope they
replace inherited an empty set anyway. The other two could not be ported to
any fork-based helper:

- InMemoryEventBus.publishAndAwait: AbstractEventBusTck's golden case binds a
  ScopedValue created inside the test and asserts the handler reads it. A
  Carrier can only carry values named in advance, so no GA mechanism reaches
  that contract. Handlers now run on the calling thread, in subscription
  order. The golden test passes unchanged — the contract was preserved, not
  renegotiated.

- SubsystemOrchestrator phase start: rebuilding the kernel's own carrier and
  forking with it was implemented and FAILED — the HTTP subsystem started
  with no handler bound and every route answered 404. The lost binding was
  HTTP_SERVER_HANDLER, bound by the APPLICATION around boot(); KernelBootstrap
  binds CURRENT_CONFIG in a second invisible layer. Subsystems now start in
  dependency-safe rounds on the booting thread.

The rule: you cannot propagate what you cannot enumerate. Forking stays
correct where the body needs only kernel-defined slots, which open(Carrier)
carries explicitly.

A preview leak no signature audit could have found: StructuredTaskScope.open()
defaulted to Joiner.awaitAllSuccessfulOrThrow(), so join() threw the preview
class FailedException before startParallel's failure-collection block was
reached. That block was dead code; a phase now always throws BootstrapException
naming the failure count. The preview alternative l